--- a/quiz_app/pubspec.yaml
+++ b/quiz_app/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.6
-
+  google_fonts: ^3.0.1
   http: ^0.13.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
